@@ -1,24 +1,24 @@
 package main.java;
 
+import org.junit.Before;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.List;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.junit.Assert.*;
 
 public class PlayerTest {
-
-    private List<Tile> charsToTiles(char[] letters) {
-        List<Tile> tiles = new ArrayList<>();
-        for (char letter : letters) tiles.add(new Tile(letter));
-        return tiles;
+    private Player player;
+    @Before
+    public void setUp() {
+        player = new Player("bob");
     }
 
     @Test
     public void testAddPoints() {
-        Player player = new Player("bob");
         int[] pointsToAdd = {1, 32, 3431, 534, 12323};
         int sum = 0;
         for (int points : pointsToAdd) {
@@ -30,8 +30,7 @@ public class PlayerTest {
 
     @Test
     public void testRackHasCorrectSize() {
-        Player player = new Player("bob");
-        player.addTiles(charsToTiles(new char[] {'A', 'B', 'C', 'A', 'A', 'D', 'E'}));
+        player.addTiles(Tile.charsToTiles("ABCAADE".toCharArray()));
         assertEquals(player.getRackSize(), 7);
         player.removeTile('A');
         assertEquals(player.getRackSize(), 6);
@@ -39,8 +38,7 @@ public class PlayerTest {
 
     @Test
     public void testGetRackPoints() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'A', 'B', 'C', 'A', 'A', 'D', 'E'});
+        List<Tile> tiles = Tile.charsToTiles("ABCAADE".toCharArray());
         player.addTiles(tiles);
         int sum = 0;
         for (Tile tile: tiles) sum += tile.getValue();
@@ -49,8 +47,7 @@ public class PlayerTest {
 
     @Test
     public void testRemoveTile() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'H', 'I', 'J', 'H'});
+        List<Tile> tiles = Tile.charsToTiles("HIJH".toCharArray());
         player.addTiles(tiles);
         Tile t1 = player.removeTile('H');
         Tile t2 = player.removeTile('H');
@@ -63,18 +60,38 @@ public class PlayerTest {
     }
 
     @Test
-    public void testHasLettersTrue() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'H', 'I', 'J', 'H', 'Y'});
+    public void testRemoveTilesTooMany() {
+        List<Character> addLetters = Arrays.asList('H', 'H','I', 'J');
+        List<Tile> tiles = Tile.charsToTiles(addLetters);
         player.addTiles(tiles);
-        boolean hasLetters = player.hasLetters(List.of('H', 'I', 'J', 'H', 'Y'));
+        List<Character> letters = Arrays.asList('H', 'I','J', 'H','Y');
+        List<Tile> removedTiles = player.removeTiles(letters);
+        List<Character> removedLetters = Tile.tilesToChars(removedTiles);
+        Collections.sort(removedLetters);
+        assertEquals(addLetters, removedLetters);
+    }
+
+    @Test
+    public void testRemoveTilesNotEvery() {
+        List<Tile> tiles = Tile.charsToTiles("ABAABC".toCharArray());
+        player.addTiles(tiles);
+        List<Character> letters = Arrays.asList('A', 'A');
+        List<Tile> removedTiles = player.removeTiles(letters);
+        List<Character> removedLetters = Tile.tilesToChars(removedTiles);
+        assertEquals(letters, removedLetters);
+    }
+
+    @Test
+    public void testHasLettersTrue() {
+        List<Tile> tiles = Tile.charsToTiles("HIJHY".toCharArray());
+        player.addTiles(tiles);
+        boolean hasLetters = player.hasLetters(Arrays.asList('H', 'I', 'J', 'H', 'Y'));
         assertTrue(hasLetters);
     }
 
     @Test
     public void testHasLettersFalse() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'H', 'I', 'J', 'H', 'Y'});
+        List<Tile> tiles = Tile.charsToTiles("HIJHY".toCharArray());
         player.addTiles(tiles);
         boolean hasLetters = player.hasLetters(List.of('K'));
         assertFalse(hasLetters);
@@ -82,8 +99,7 @@ public class PlayerTest {
 
     @Test
     public void testHasCopiedLetter() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'H', 'I', 'J'});
+        List<Tile> tiles = Tile.charsToTiles("HIJ".toCharArray());
         player.addTiles(tiles);
         boolean hasLetters = player.hasLetters(Arrays.asList('J', 'J'));
         assertFalse(hasLetters);
@@ -91,8 +107,7 @@ public class PlayerTest {
 
     @Test
     public void testHasTripledLetter() {
-        Player player = new Player("bob");
-        List<Tile> tiles = charsToTiles(new char[] {'H', 'I', 'J', 'J'});
+        List<Tile> tiles = Tile.charsToTiles("HIJJ".toCharArray());
         player.addTiles(tiles);
         boolean hasLetters = player.hasLetters(Arrays.asList('J', 'J', 'J'));
         assertFalse(hasLetters);
